@@ -1,3 +1,12 @@
+Fri May 28 00:32:25 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* insns.def (invokesuper): check consistency between class of self and
+	  class of method being invoked by super.  This is temporary measure
+	  for YARV.  See [ruby-core:30313] in detail.  See [ruby-dev:40959]
+	  [ruby-dev:39772] [ruby-core:27000] [ruby-core:27230]
+
+	* vm_insnhelper.c (vm_search_superclass): ditto.
+
 Thu May 27 12:42:23 2010  Akinori MUSHA  <knu@iDaemons.org>
 
 	* LGPL: Removed.  We no longer have LGPL'd source files in our
